added queue, updated the react welcome page, and fixed some bugs
