# src/jvmMain/kotlin/com/emudeck/igdb_proxy/routes/metadata/Api.kt
@@ -3,6 +3,7 @@ package com.emudeck.igdb_proxy.routes.metadata
 import com.emudeck.igdb_proxy.API_URL
 import com.emudeck.igdb_proxy.auth
 import com.emudeck.igdb_proxy.client
+import com.emudeck.igdb_proxy.logger
 import com.emudeck.igdb_proxy.routes.metadata.models.GameResponse
 import com.emudeck.igdb_proxy.routes.metadata.models.MetadataData
 import io.github.reactivecircus.cache4k.Cache
@@ -11,6 +12,9 @@ import io.ktor.client.request.*
 import io.ktor.server.application.*
 import io.ktor.server.response.*
 import io.ktor.server.routing.*
+import kotlinx.coroutines.flow.flow
+import kotlinx.coroutines.sync.Mutex
+import kotlinx.coroutines.sync.withLock
 import kotlinx.serialization.Serializable
 import kotlin.time.Duration.Companion.hours
 
@@ -35,15 +39,19 @@ fun Route.api() {
 			call.respond(cached)
 		} else
 		{
-			val response = client.post {
-				url(API_URL)
-				header("Client-ID", auth.clientId)
-				setBody("search \"$title\"; fields *, involved_companies.*, involved_companies.company.*, game_modes.*, multiplayer_modes.*, platforms.*; limit 20;")
-			}.body<List<GameResponse>>()
-			val metadata = response.sortedBy { x -> x.id }
-			searchCache.put(title, metadata)
-			getCache.put(metadata.first().id, metadata.first())
-			call.respond(metadata)
+			val mutex = Mutex(locked = true)
+			queue.emit(
+				QueueItem(
+					mutex = mutex,
+					body = "search \"$title\"; fields *, involved_companies.*, involved_companies.company.*, game_modes.*, multiplayer_modes.*, platforms.*; limit 20;",
+					callback = { response ->
+						val metadata = response.body<List<GameResponse>>().sortedBy { x -> x.id }
+						searchCache.put(title, metadata)
+						call.respond(metadata)
+					}
+				)
+			)
+			mutex.withLock{}
 		}
 	}
 	post<GetBody>("/get") {
@@ -54,15 +62,19 @@ fun Route.api() {
 			call.respond(cached)
 		} else
 		{
-			val response = client.post {
-				url(API_URL)
-				header("Client-ID", auth.clientId)
-				setBody("where id = $id; fields *, involved_companies.*, involved_companies.company.*, game_modes.*, multiplayer_modes.*, platforms.*; limit 20;")
-			}.body<List<GameResponse>>()
-			val metadata = response.first()
-			println(metadata)
-			getCache.put(id, metadata)
-			call.respond(metadata)
+			val mutex = Mutex(locked = true)
+			queue.emit(
+				QueueItem(
+					mutex = mutex,
+					body = "where id = $id; fields *, involved_companies.*, involved_companies.company.*, game_modes.*, multiplayer_modes.*, platforms.*; limit 1;",
+					callback = { response ->
+						val metadata = response.body<List<GameResponse>>().first()
+						getCache.put(id, metadata)
+						call.respond(metadata)
+					}
+				)
+			)
+			mutex.withLock{}
 		}
 	}
 }
