# src/jvmMain/resources/openapi/documentation.yaml
@@ -3,8 +3,6 @@ info:
   title: "MetaDeck IGDB Proxy API"
   description: "Proxys requests to IGDB for auth headers and data formatting, for use with MetaDeck ONLY, unless explicit permission is given by me over on the discord"
   version: "1.0.0"
-servers:
-- url: "https://api.emudeck.com/metadeck/api/"
 #- url: "http://localhost:8081/"
 paths:
   /search:
@@ -76,35 +74,32 @@ components:
     MetadataData:
       type: object
       properties:
-        title:
-          type: string
         id:
           type: integer
           format: int32
-        description:
+        name:
           type: string
-        developers:
-          type: array
-          items:
-            $ref: "#/components/schemas/Developer"
-        publishers:
-          type: array
-          items:
-            $ref: "#/components/schemas/Publisher"
-        release_date:
+        summary:
+          type: string
+        first_release_date:
           type: integer
           format: int32
-        compat_category:
-          type: integer
-          format: int32
-        compat_notes:
-          type: string
-          format: nullable
-        store_categories:
+        game_modes:
           type: array
           items:
-            type: integer
-            format: int32
+            $ref: "#/components/schemas/GameMode"
+        multiplayer_modes:
+          type: array
+          items:
+            $ref: "#/components/schemas/MultiplayerMode"
+        platforms:
+          type: array
+          items:
+            $ref: "#/components/schemas/Platform"
+        involved_companies:
+          type: array
+          items:
+            $ref: "#/components/schemas/InvolvedCompany"
       example:
         title: Super Mario Bros.
         id: 358
@@ -130,16 +125,57 @@ components:
       type: array
       items:
         $ref: "#/components/schemas/MetadataData"
-    Developer:
+    GameMode:
       type: object
       properties:
-        name:
+        id:
+          type: integer
+          format: int32
+        slug:
           type: string
-        url:
-          type: string
-    Publisher:
+    MultiplayerMode:
       type: object
       properties:
+        id:
+          type: integer
+          format: int32
+        onlinecoop:
+          type: boolean
+        offlinecoop:
+          type: boolean
+        splitscreen:
+          type: boolean
+        splitscreenonline:
+          type: boolean
+        lancoop:
+          type: boolean
+    Platform:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        category:
+          type: integer
+          format: int32
+    InvolvedCompany:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        developer:
+          type: boolean
+        publisher:
+          type: boolean
+        company:
+          $ref: "#/components/schemas/Company"
+    Company:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
         name:
           type: string
         url:
